--- a/github-profiles/index.html
+++ b/github-profiles/index.html
@@ -8,6 +8,34 @@
         <title>Document</title>
     </head>
     <body>
+        <form class="user-form" id="form">
+            <input type="text" id="search" placeholder="Search a Github User">
+        </form>
+
+        <main id="main">
+            <div class="card">
+                <div>
+                    <img src="https://randomuser.me/api/portraits/men/30.jpg" class="avatar">
+                </div>
+                <div class="user-info">
+                    <h2>name</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, reprehenderit esse voluptatem deleniti eligendi, laborum inventore, commodi itaque quos minima labore mollitia totam iste voluptas sed. Non earum quo repudiandae.
+                    </p>
+                    <ul>
+                        <li>300 <strong>Followers</strong></li>
+                        <li>100 <strong>Following</strong></li>
+                        <li>30 <strong>Repos</strong></li>
+                    </ul>
+                    <div id="repos">
+                        <a href="#" class="repos">Repo 1</a>
+                        <a href="#" class="repos">Repo 1</a>
+                        <a href="#" class="repos">Repo 1</a>
+                    </div>
+                </div>
+            </div>
+        </main>
+
         <script src="script.js"></script>
     </body>
 </html>
