--- a/sticky-navbar/index.html
+++ b/sticky-navbar/index.html
@@ -11,7 +11,7 @@
         <nav class="nav">
             <div class="container">
                 <h1 class="logo">
-                    <a href="/index.html">My Website</a>
+                    <a href="#">My Website</a>
                 </h1>
                 <ul>
                     <li><a href="#">Home</a></li>
